--- a/index.html
+++ b/index.html
@@ -10,17 +10,45 @@
   <body>
     <header>
       <div class="container flex">
-        <div class="logo">logo</div>
-        <nav>navigazione</nav>
-        <div class="login">login</div>
+        <div class="logo"></div>
+        <nav class="flex">
+          <div class="small">
+            <ul>
+              <li><a href="#">Scarica</a></li>
+            </ul>
+          </div>
+          <div class="small">
+            <ul>
+              <li><a href="#">Perchè Discord</a></li>
+            </ul>
+          </div>
+          <div class="small">
+            <ul>
+              <li><a href="#">Nitro</a></li>
+            </ul>
+          </div>
+          <div class="small">
+            <ul>
+              <li><a href="#">Sicurezza</a></li>
+            </ul>
+          </div>
+          <div class="small flex">
+            <ul>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="login flex">
+          <button>Accedi</button>
+        </div>
+      </div>
+
+      <div class="jumbotron">
+        <div class="container flex">
+          <div class="xlarge"></div>
+        </div>
       </div>
     </header>
-
-    <div class="jumbotron">
-      <div class="container flex">
-        <div class="xlarge"></div>
-      </div>
-    </div>
 
     <div class="positive">
       <div class="container flex">
