--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
 
       <div class="jumbotron">
         <div class="container flex">
-          <div class="xlarge"></div>
+          <div class="xlarge">
+            <h1>Il tuo posto per parlare</h1>
+            <p>
+              Che tu faccia parte di un club scolastico, gruppo di gamer,
+              comunità artistica mondiale, o semplicemente di un piccolo gruppo
+              di amici che vuole passare il tempo assieme, Discord rende più
+              facile chiacchierare ogni giorno e ritrovarsi più spesso
+            </p>
+            <button id="client-download">&DownArrow; Scarica per Mac</button>
+            <button id="web-client">Apri Discord nel tuo browser</button>
+          </div>
         </div>
       </div>
     </header>
