--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
 
     <div class="positive">
       <div class="container flex">
-        <div class="large"></div>
-        <div class="med"></div>
+        <div class="large">
+          <img src="img/item1.svg" alt="" />
+        </div>
+        <div class="med">
+          <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+          <p>
+            I server Discord sono organizzati in canali tematici in cui puoi
+            collaborare, condividere o semplicemente parlare della tua giornata
+            senza intasare una chat di gruppo.
+          </p>
+        </div>
       </div>
     </div>
 
