--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -75,30 +75,96 @@
         </div>
       </div>
     </div>
-
+    <svg
+      class="wave"
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1440 100"
+      preserveAspectRatio="none"
+    >
+      <path
+        class="wavePath-haxJK1 animationPaused-2hZ4IO"
+        d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+        fill="currentColor"
+      ></path>
+    </svg>
     <div class="negative">
       <div class="container flex">
-        <div class="med"></div>
-        <div class="large"></div>
+        <div class="med">
+          <h1>Dove trovarsi è facile</h1>
+          <p>
+            Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel
+            tuo server possono vedere che sei lì e unirsi istantaneamente senza
+            dover chiamare
+          </p>
+        </div>
+        <div class="large"><img src="img/item2.svg" alt="" /></div>
       </div>
     </div>
-
+    <svg
+      class="wave-rotate"
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1440 100"
+      preserveAspectRatio="none"
+    >
+      <path
+        class="wavePath-haxJK1 animationPaused-2hZ4IO"
+        d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+        fill="currentColor"
+      ></path>
+    </svg>
     <div class="positive">
       <div class="container flex">
-        <div class="large"></div>
-        <div class="med"></div>
+        <div class="large"><img src="img/item3.svg" alt="" /></div>
+        <div class="med">
+          <h1>Da pochi a un fandom</h1>
+          <p>
+            Dai inizio a una community di qualsiasi dimensione con strumenti di
+            moderazione e accesso ai membri personalizzabile. Concedi ai membri
+            poteri speciali, crea canali privati, e molto altro.
+          </p>
+        </div>
+      </div>
+    </div>
+    <svg
+      class="wave"
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1440 100"
+      preserveAspectRatio="none"
+    >
+      <path
+        class="wavePath-haxJK1 animationPaused-2hZ4IO"
+        d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+        fill="currentColor"
+      ></path>
+    </svg>
+    <div class="negative">
+      <div class="container flex">
+        <div class="xxlarge">
+          <h1>Tecnologia Affidabile per tenersi in contatto</h1>
+          <p>
+            Video e audio a bassa latenza ti faranno sentire come se foste tuti
+            nella stessa stanza. Fai ciao in video, guarda gli amici giocare in
+            streaming, o riunitevi in una sessione di disegno con la
+            condivisione schermo
+          </p>
+          <img src="img/item4-big.svg" alt="" />
+          <img src="img/stars.svg" alt="" />
+          <h1>Pronto a iniziare la tua avventura?</h1>
+          <button class="mac-download">&DownArrow; Scarica per Mac</button>
+        </div>
       </div>
     </div>
 
-    <div class="big">
+    <footer>
       <div class="container flex">
-        <div class="xxlarge"></div>
-      </div>
-    </div>
-
-    <footer class="negative">
-      <div class="container flex">
-        <div class="med"></div>
+        <div class="med">
+          <h1>Il tuo posto per parlare</h1>
+          <img src="img/ita.png" alt="" />
+          <p>Italiano</p>
+        </div>
         <div class="large flex">
           <div class="small"></div>
           <div class="small"></div>
