--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Fake Discord</title>
   </head>
@@ -13,7 +20,7 @@
         <div class="logo"></div>
         <nav class="flex">
           <div class="small">
-            <ul>
+            <ul class="nav">
               <li><a href="#">Scarica</a></li>
             </ul>
           </div>
@@ -163,22 +170,130 @@
         <div class="med">
           <h1>Il tuo posto per parlare</h1>
           <img src="img/ita.png" alt="" />
-          <p>Italiano</p>
+          <p>Italiano &#709;</p>
+          <br />
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-youtube"></i>
         </div>
+
         <div class="large flex">
-          <div class="small"></div>
-          <div class="small"></div>
-          <div class="small"></div>
-          <div class="small"></div>
+          <div class="small">
+            <h4>Prodotto</h4>
+            <ul class="footer-info">
+              <li>
+                <a href="#">Scarica</a>
+              </li>
+              <li>
+                <a href="#">Perchè Discord</a>
+              </li>
+              <li>
+                <a href="#">Nitro</a>
+              </li>
+              <li>
+                <a href="#">Sicurezza</a>
+              </li>
+              <li>
+                <a href="#">Assistenza</a>
+              </li>
+            </ul>
+          </div>
+          <div class="small">
+            <h4>Compagnia</h4>
+            <ul class="footer-info">
+              <li>
+                <a href="#">Chi Siamo</a>
+              </li>
+              <li>
+                <a href="#">Lavora con noi</a>
+              </li>
+              <li>
+                <a href="#">Marchio</a>
+              </li>
+              <li>
+                <a href="#">Redazione</a>
+              </li>
+              <li>
+                <a href="#">Negozio</a>
+              </li>
+            </ul>
+          </div>
+          <div class="small">
+            <h4>Risorse</h4>
+            <ul class="footer-info">
+              <li>
+                <a href="#">Scarica</a>
+              </li>
+              <li>
+                <a href="#">Perchè Discord</a>
+              </li>
+              <li>
+                <a href="#">Nitro</a>
+              </li>
+              <li>
+                <a href="#">Sicurezza</a>
+              </li>
+              <li>
+                <a href="#">Assistenza</a>
+              </li>
+              <li>
+                <a href="#">Scarica</a>
+              </li>
+              <li>
+                <a href="#">Perchè Discord</a>
+              </li>
+              <li>
+                <a href="#">Nitro</a>
+              </li>
+              <li>
+                <a href="#">Sicurezza</a>
+              </li>
+              <li>
+                <a href="#">Assistenza</a>
+              </li>
+              <li>
+                <a href="#">Assistenza</a>
+              </li>
+            </ul>
+          </div>
+          <div class="small">
+            <h4>Norme</h4>
+            <ul class="footer-info">
+              <li>
+                <a href="#">Perchè Discord</a>
+              </li>
+              <li>
+                <a href="#">Nitro</a>
+              </li>
+              <li>
+                <a href="#">Sicurezza</a>
+              </li>
+              <li>
+                <a href="#">Assistenza</a>
+              </li>
+              <li>
+                <a href="#">Assistenza</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
-
+    <div class="bottom-separator">
+      <div class="container">
+        <div class="separator"></div>
+      </div>
+    </div>
     <footer>
       <div class="container flex">
         <div id="smallfooter">
-          <div class="xxs">logo</div>
-          <div class="xxs">button</div>
+          <div class="xxs">
+            <img src="img/logo.svg" alt="" />
+          </div>
+          <div class="xxs">
+            <button class="register">Registrati</button>
+          </div>
         </div>
       </div>
     </footer>
