finish project ( dirty code)

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <footer>
       <div class="container flex">
-        <div class="med">
+        <div class="med med-footer">
           <h1>Il tuo posto per parlare</h1>
           <img src="img/ita.png" alt="" />
           <p>Italiano &#709;</p>
